--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "flowbite-react": "^0.10.1",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
