--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,14 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   },
   "name": "server",
