--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
