--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.5",
+    "firebase": "^11.0.0",
     "flowbite-react": "^0.10.1",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
