--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,11 @@ JWT_SECRET=your_secret_key
 #email and password
 EMAIL_USER=sandeepamallawarachchi1@gmail.com
 EMAIL_PASS=gvtt tkss mhlj bmtb
+
+#firebase configurations
+FIREBASE_API_KEY=AIzaSyBUWjq5TEZ7lh9JpzMCfGLOPX_WbLqBLGw
+FIREBASE_AUTH_DOMAIN=hrm-system-9f4a3.firebaseapp.com
+FIREBASE_PROJECT_ID=hrm-system-9f4a3
+FIREBASE_STORAGE_BUCKET=hrm-system-9f4a3.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=698601974813
+FIREBASE_APP_ID=1:698601974813:web:8331ea64861511b33eeaf4
