--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
+    "firebase": "^11.0.0",
+    "firebase-admin": "^12.6.0",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
