--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
