--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.5",
     "file-saver": "^2.0.5",
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
