--- a/server/.env
+++ b/server/.env
@@ -9,8 +9,8 @@ DB_PORT=3306
 JWT_SECRET=your_secret_key
 
 #email and password
-EMAIL_USER=sandeepamallawarachchi1@gmail.com
-EMAIL_PASS=gvtt tkss mhlj bmtb
+EMAIL_USER=sandeepaabmsz@gmail.com
+EMAIL_PASS=nxog ehlp fsid tshc
 
 #firebase configurations
 FIREBASE_API_KEY=AIzaSyBUWjq5TEZ7lh9JpzMCfGLOPX_WbLqBLGw
